<resources>
    <string name="app_name">不无聊</string>
    <string name="menu_fast_mode">节流模式</string>
    <string name="menu_quality_mode">装X模式</string>
    <string name="hint_fast_mode">进入节流模式，gif图被压缩75%</string>
    <string name="hint_quality_mode">进入装X模式,gif图直接原始质量，汗毛都看得清哦</string>
    <string name="hint_share_failed">"分享失败,找作者抽他"</string>

    <string name="hint_retry">重试</string>
    <string name="hint_no_data">木有看到数据，我给你找编辑主管去！！</string>
    <string name="hint_last_comment">最新评论</string>
    <string name="hint_et_comment">做一个有骚气的喷子~</string>
    <string name="hint_quit_app">再按一次退出应用</string>

    <!--error-->
    <string name="hint_no_net_work">骚年请去把网连好再来~~~~</string>
    <string name="hint_retry_get_data">重新获取数据中...</string>

    <!--侧滑菜单-->
    <string name="menu_about">关于我们</string>
    <string name="menu_quit_login">退出登录</string>
    <string name="menu_login">我要登录,嗷~~</string>
    <string name="menu_no_login">上车请打卡</string>
    <string name="menu_contact_us">联系客服</string>


    <!--登录注册-->
    <string name="register_hint">现在就注册</string>
    <string name="register_limit_hint">除了字数,完全没有限制,请随便乱注册</string>
    <string name="register_error">很不幸注册失败,原因:%1$s</string>
    <string name="register_ok">举国同庆你注册成功并且已经登录</string>
    <string name="register_name_empty">骚年你的账号勒?</string>
    <string name="register_pwd_empty">骚年的密码勒?</string>
    <string name="qq_login">通过腾讯QQ登录</string>

    <string name="register_btn">注册</string>
    <string name="login_btn">登录</string>
    <string name="account_name_hint">账号</string>
    <string name="account_pwd_hint">密码</string>
    <string name="login_ok">举国同庆登录成功...</string>
    <string name="empty_account_name">请输入你丫的账号</string>
    <string name="empty_account_pwd">请输入你丫的密码</string>
    <string name="login_complete">登陆成功</string>
    <string name="login_upload">骚等</string>
    <string name="login_error">很明显登陆失败</string>
    <string name="login_waiting">不无聊君耕耘中,请骚等...</string>
    <string name="quit_login">成功退出登录</string>
    <string name="quit_dialog_title">确定退出?</string>
    <string name="quit_dialog_content">退出登录后老司机无法开车哦!</string>
    <string name="quit_dialog_no">不</string>
    <string name="quit_dialog_yes">对</string>


    <string name="hint_load_more">加载更多污妖之力中...</string>
    <string name="hint_no_more_data">污妖之力已经见底</string>
    <string name="hint_loading">污妖之力聚集中...</string>
    <!--home page-->
    <string name="menu_spoof">司机开眼</string>
    <string name="menu_movie">电影姿势</string>
    <string name="btn_area_zb">zb_area</string>
    <string name="btn_area_movie">movie_area</string>
    <string name="btn_area_face">face_area</string>
    <string name="btn_area_chat">闲聊区</string>


    <!--表情区-->
    <string name="area_face_title">表情区</string>
    <string name="area_face_detail_btn_favorite">收藏</string>
    <string name="area_face_detail_btn_share">分享</string>
    <string name="area_face_detail_btn_download">下载</string>
    <string name="area_face_detail_btn_close">关闭</string>

    <string name="hint_empty_data">empty data</string>

    <!--movie区-->
    <string name="hint_no_comment_input">请输入评论后再发送OK?</string>
    <string name="hint_add_comment_success">骚年你的这一句话世界都在颤抖</string>
    <string name="hint_no_comment_data">暂无评论,骚年展示你的污妖之力吧！</string>
    <string name="author_name">内测用户-%1$s</string>


    <!--about-->
    <string-array name="coder_one">
        <item>姓名: 贺小田</item>
        <item>法号: 代码小妖</item>
        <item>职责: Android撸码师</item>
        <item>企鹅: 617989237</item>
        <item>描述: 本人芳龄(/偷笑)20几,打算把有限的生命投入到无限的代码中去</item>
    </string-array>

    <string-array name="coder_two">
        <item>姓名: 小浩鑫</item>
        <item>法号: Jucsin</item>
        <item>职责: Android撸码师</item>
        <item>企鹅: 103378499X</item>
        <item>座右铭：</item>
    </string-array>

    <string-array name="designer">
        <item>姓名: 周Yang</item>
        <item>法号: 设计小喵</item>
        <item>职责: 界面设计</item>
        <item>企鹅: 18506039X</item>
        <item>描述: 嗯，这是我们唯一的设计喵,这里还是不乱写了,要是不给设计图那就玩完了。</item>
    </string-array>
    <string name="about_version">v1.6.6</string>
    <string name="about_app_github">https://github.com/ohdroid/zbmaster</string>

    <!--help-->
    <string name="help_contact">客服邮箱：617989237@qq.com</string>
    <string name="help_hint">发送你需要的服务,给帅炸天的客服小司机，我们会及时的给你回馈哦~</string>

    <!--hint-->
    <string name="pop_view_hint">从左边向右滑动,拉出侧边菜单</string>
    <string name="pop_button_view">知道了</string>

    <string name="app_slogan">不无聊，让生活更有趣！</string>

</resources>
