<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <Button
        android:id="@+id/btn_area_zb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_area_zb"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_area_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/btn_area_zb"
        android:text="@string/btn_area_movie"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_area_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_area_zb"
        android:text="@string/btn_area_face"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_area_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_area_zb"
        android:layout_toRightOf="@id/btn_area_face"
        android:text="@string/btn_area_chat"
        android:textSize="20sp" />


</RelativeLayout>