<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:src="@mipmap/ic_launcher" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_name"
        style="@style/login_edit_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_name_hint" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/et_password"
        style="@style/login_edit_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_pwd_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/register_btn"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/register_limit_hint"
        android:textColor="#d2d2d2"
        android:textSize="16sp" />
</LinearLayout>