<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_face_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#d9000000"
    android:gravity="center"
    android:orientation="vertical">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/iv_face_detail"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        fresco:placeholderImage="@mipmap/ic_launcher" />

    <LinearLayout
        android:id="@+id/interaction_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/area_face_detail_btn_favorite"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/share_btn"
            android:elevation="4dp"
            android:text="@string/area_face_detail_btn_share"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/area_face_detail_btn_download"
            android:visibility="gone" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_close_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area_face_detail_btn_close"
        android:visibility="gone" />


</LinearLayout>