<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/left_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/bottom_menu_bg_color"
    android:clickable="true"
    android:orientation="vertical">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/user_photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        app:placeholderImage="@mipmap/image_holder"
        app:roundAsCircle="true" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/menu_no_login"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/login_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/menu_login"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/about_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:paddingTop="8dp"
        android:text="@string/menu_about"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp" />

</LinearLayout>