<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/login_bg_color"
    tools:context="com.ohdroid.zbmaster.about.view.AboutActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:src="@mipmap/mount_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:src="@mipmap/icon_nobg" />

        <TextView
            android:id="@+id/name_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/about_version"
            android:textColor="#fff"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/name_github"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="16sp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autoLink="all"
            android:gravity="center_horizontal"
            android:text="@string/about_app_github"
            android:textColor="#fff"
            android:textSize="16sp" />


        <android.support.v4.view.ViewPager
            android:id="@+id/about_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom" />

    </LinearLayout>

    <github.chenupt.springindicator.SpringIndicator
        android:id="@+id/indicator"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_gravity="bottom"
        android:layout_marginBottom="54dp"
        android:layout_marginLeft="90dp"
        android:layout_marginRight="90dp"
        app:siIndicatorColor="@color/colorPrimary"
        app:siRadiusMax="12dp"
        app:siRadiusMin="6dp"
        app:siSelectedTextColor="@android:color/white"
        app:siTextColor="@android:color/white"
        app:siTextSize="18sp" />


</FrameLayout>
